force-app/main/default/objects/Clarity_Form__c/Clarity_Form__c.object-meta.xml
<CustomObject>
    <description>Forms designed by Salesforce Administrators.</description>
    <label>Clarity Form</label>
    <nameField>
        <label>Clarity Forms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clarity Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>