force-app/main/default/objects/Clarity_Form__c/fields/Clarity_Form_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Clarity_Form_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clarity Form Assignment</label>
    <referenceTo>Clarity_Form_Assignment__c</referenceTo>
    <relationshipLabel>Clarity Forms</relationshipLabel>
    <relationshipName>Clarity_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>