force-app/main/default/objects/Clarity_Form__c/fields/Clarity_Form_Style__c.field-meta.xml
<CustomField>
    <fullName>forms__Form_Style__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clarity Form Style</label>
    <referenceTo>forms__Form_Style__c</referenceTo>
    <relationshipLabel>Clarity Forms</relationshipLabel>
    <relationshipName>forms__Forms</relationshipName>
    <type>Lookup</type>
</CustomField>