force-app/main/default/objects/Clarity_Form__c/fields/Has_Thank_You__c.field-meta.xml
<CustomField>
    <fullName>Has_Thank_You__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Thank You</label>
    <type>Checkbox</type>
</CustomField>