force-app/main/default/objects/Clarity_Form__c/fields/Is_Flow__c.field-meta.xml
<CustomField>
    <fullName>Is_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Flow</label>
    <type>Checkbox</type>
</CustomField>