force-app/main/default/objects/Clarity_Form__c/listViews/Form_Queue_Clarity_Form.listView-meta.xml
<ListView>
    <fullName>Form_Queue_Clarity_Form</fullName>
    <filterScope>Queue</filterScope>
    <label>Form Queue</label>
    <queue>Form_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>